--- a/beauty_front/src/index.css
+++ b/beauty_front/src/index.css
@@ -140,9 +140,16 @@ h3 {
   align-items: center;
 }
 
-.remove-btn,
+.remove-btn {
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: darkred;
+}
+
 .add-btn {
   border: none;
   background: none;
   cursor: pointer;
+  color: darkblue;
 }
